@@ -10,6 +10,8 @@ PHP                                                                        NEWS
   . Fixed bug GH-15330 (Do not scan generator frames more than once). (Arnaud)
   . Fixed bug GH-15644 (Asymmetric visibility doesn't work with hooks). (ilutov)
   . Implemented lazy objects RFC. (Arnaud)
+  . Fixed bug GH-15686 (Building shared iconv with external iconv library).
+    (Peter Kokot, zeriyoshi)
 
 - DOM:
   . Fixed bug GH-13988 (Storing DOMElement consume 4 times more memory in
